2025-03-25  Mintsuki  <mintsuki@protonmail.com>

    *** Release 9.2.1 ***

    Noteworthy changes compared to the previous release, 9.2.0:

    Miscellaneous:
        - Dynamically allocate volume index instead of relying on a hard coded
          limit and a fixed allocation. This fixes potential panics or failure
          to access volumes on systems with a lot of drives/partitions.
        - Limine boot protocol/ELF: Print the name of unresolved symbols on
          panic.

2025-03-16  Mintsuki  <mintsuki@protonmail.com>

    *** Release 9.2.0 ***

    Noteworthy changes compared to the previous release, 9.1.3:

    New features:
        - Introduce initial support for the Boot Loader Interface
          specification.
        - Add /EFI/limine/limine.conf to the paths tried for config file when
          using EFI.

    Miscellaneous:
        - Do not try config path /EFI/BOOT/limine.conf unless booted using EFI.

2025-03-13  Mintsuki  <mintsuki@protonmail.com>

    *** Release 9.1.3 ***

    Noteworthy changes compared to the previous release, 9.1.2:

    Bug fixes:
        - Loongarch64: Fix alignment of TLB-refill handler.

    Miscellaneous:
        - Many fixes and improvements to documentation, installed or otherwise,
          including further licensing clarifications.

2025-03-11  Mintsuki  <mintsuki@protonmail.com>

    *** Release 9.1.2 ***

    Noteworthy changes compared to the previous release, 9.1.1:

    This release does not change anything code-wise, but rather it focuses on
    sorting out the licensing mess of Nyu-EFI, by updating it to the latest
    revision which tackles this problem, and furthermore it improves the
    COPYING file to be more explicit about submodules and their licensing.

2025-03-10  Mintsuki  <mintsuki@protonmail.com>

    *** Release 9.1.1 ***

    Noteworthy changes compared to the previous release, 9.1.0:

    Bug fixes:
        - Do not use ConOut for serial output exclusively unless serial is