@@ -6,6 +6,7 @@
  
 +#include <stddef.h>
 +#include <lib/libc.h>
++#include <lib/misc.h>
 +#include <mm/pmm.h>
 +
 +#define STBI_ASSERT(x)
@@ -34,8 +35,10 @@
 +    void *STBI_REALLOC_buf = (x); \
 +    size_t STBI_REALLOC_alloc_size = (y); \
 +    void *STBI_REALLOC_new_buf = STBI_MALLOC(STBI_REALLOC_alloc_size); \
++    size_t STBI_REALLOC_old_size = *(size_t *)((void *)STBI_REALLOC_buf - 16); \
 +    if (STBI_REALLOC_buf != NULL) { \
-+        memcpy(STBI_REALLOC_new_buf, STBI_REALLOC_buf, STBI_REALLOC_alloc_size); \
++        memcpy(STBI_REALLOC_new_buf, STBI_REALLOC_buf, \
++               MIN(STBI_REALLOC_alloc_size, STBI_REALLOC_old_size)); \
 +        STBI_FREE(STBI_REALLOC_buf); \
 +    } \
 +    STBI_REALLOC_new_buf; \
@@ -45,9 +48,6 @@
 +#define STBI_NO_STDIO
 +#define STBI_NO_SIMD
 +#define STBI_NO_LINEAR
-+
-+
-+
 +#define STBI_ONLY_JPEG
 +#define STBI_ONLY_PNG
 +#define STBI_ONLY_BMP
